$merge stage does not require "coll" field

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Hide

      Run a $merge stage with the following form:

      {
        "$merge": {
          "into": {
            "db": "foo"
          }
        }
      }
      

      Outputs documents to the "foo." collection.

      Show
      Run a $merge stage with the following form: { "$merge" : { "into" : { "db" : "foo" } } } Outputs documents to the "foo." collection.
    • Query Optimization 2021-07-12
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When running a $merge stage with no "coll" specified, $merge does not return an error. However, this field should be required.

            Assignee:
            Alice Doherty
            Reporter:
            Alice Thum (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: