SERVER-57868 $merge stage does not require "coll" field